--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
 @import url('fonts/font-awesome/css/font-awesome.min.css');
 
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-size: 16px;
+}
+
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
@@ -12,4 +19,9 @@ body {
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
 }
